--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@inovua/reactdatagrid-community": "^5.2.0",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
-    "@mui/x-data-grid": "^5.17.5",
     "axios": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
